fazendo o storage local guardar apenas o token e pegar todas as informações do usuário do token
